src/packaged/main/default/objects/AccessTokenLog__c/AccessTokenLog__c.object-meta.xml
<CustomObject>
    <description>History record that documents every external action that is performed with an access token.</description>
    <label>Access Token Log</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Access Token Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>