src/packaged/main/default/objects/AccessTokenLog__c/fields/AccessToken__c.field-meta.xml
<CustomField>
    <fullName>AccessToken__c</fullName>
    <description>The access token that was used to authorize this log</description>
    <inlineHelpText>The access token that was used to authorize this log</inlineHelpText>
    <label>Access Token</label>
    <referenceTo>AccessToken__c</referenceTo>
    <relationshipLabel>Logs</relationshipLabel>
    <relationshipName>Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>