src/packaged/main/default/objects/AccessTokenLog__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Authorization</fullName>
            </value>
            <value>
                <fullName>Time Entry Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>