src/packaged/main/default/objects/AccessTokenLog__c/fields/IpAddress__c.field-meta.xml
<CustomField>
    <fullName>IpAddress__c</fullName>
    <description>IP Address of the user that visited the external site and authorized with this access token</description>
    <inlineHelpText>IP Address is evaluated with standard web technology and may be inaccurate.</inlineHelpText>
    <label>IP Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>