src/packaged/main/default/objects/AccessTokenLog__c/fields/TimeEntry__c.field-meta.xml
<CustomField>
    <fullName>TimeEntry__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Time Entry to which this access token transaction applies.</description>
    <label>Time Entry</label>
    <referenceTo>TimeEntry__c</referenceTo>
    <relationshipLabel>Access Token Logs</relationshipLabel>
    <relationshipName>AccessTokenLogs</relationshipName>
    <type>Lookup</type>
</CustomField>