src/packaged/main/default/objects/AccessTokenLog__c/fields/UserAgent__c.field-meta.xml
<CustomField>
    <fullName>UserAgent__c</fullName>
    <description>User Agent that was used during the transaction</description>
    <inlineHelpText>User Agent (Browser + OS)</inlineHelpText>
    <label>User Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>